tests/baselines/reference/emptyTuplesTypeAssertion02.errors.txt
tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion02.ts(2,11): error TS2339: Property '0' does not exist on type '[]'.


==== tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion02.ts (1 errors) ====
    let x = [] as [];
    let y = x[0];
              ~
!!! error TS2339: Property '0' does not exist on type '[]'.